--- a/Mission11/Views/Home/Index.cshtml
+++ b/Mission11/Views/Home/Index.cshtml
@@ -3,21 +3,13 @@
 }
 
 @model BooksListViewModel
-
+    <br />
     <h1>Book Store Books</h1>
-
+    <br />
     @foreach (Book b in Model.Books)
     {
-        <h3>@b.Title</h3>
-        <ul>
-            <li>@b.Author</li>
-            <li>@b.Publisher</li>
-            <li>@b.Isbn</li>
-            <li>@b.Classification</li>
-            <li>@b.Category</li>
-            <li>@b.PageCount</li>
-            <li>@b.Price</li>
-        </ul>
+        <partial name="BookSummary" model="b" />
     }
 
-<div page-model="@Model.PaginationInfo" page-action="Index"></div>
+<div page-model="@Model.PaginationInfo" page-action="Index" page-class-enabled="true" page-class="btn custom-button" 
+page-class-normal="btn-outline-dark" page-class-selected="btn-primary" class="btn-group pull-right m-1"></div>
