--- a/Mission11/Views/Shared/_Layout.cshtml
+++ b/Mission11/Views/Shared/_Layout.cshtml
@@ -13,11 +13,15 @@
     <div class="bg-dark text-white p-2">
         <span class="navbar-brand m-lg-2">BOOKS</span>
     </div>
-
-    <div class="container col-9">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+    <div class="row m-1 p-1">
+        <div class="col-3">
+            <vc:book-types />
+        </div>
+        <div class="container col-9">
+            <main role="main" class="pb-3">
+                @RenderBody()
+            </main>
+        </div>
     </div>
 
 
