--- a/Mission11/Views/Shared/Components/BookTypes/Default.cshtml
+++ b/Mission11/Views/Shared/Components/BookTypes/Default.cshtml
@@ -7,10 +7,10 @@
 @model IQueryable<string>
 
 <div class="d-grid gap-2">
-    <a class="btn btn-outline-secondary" asp-controller="Home" asp-action="Index" asp-route-bookType="">Home</a>
+    <a class="btn btn-outline-secondary" asp-controller="Home" asp-action="Index" asp-route-bookType="" asp-route-pageNum="">Home</a>
 
     @foreach(string bt in Model ?? Enumerable.Empty<string>())
     {
-        <a class="btn btn-outline-secondary" asp-controller="Home" asp-action="Index" asp-route-bookType="@bt" asp-route-pageNum="1">@bt</a>
+        <a class="btn @(bt == ViewBag.SelectedBookType ? "btn-primary" : "btn-outline-secondary")" asp-controller="Home" asp-action="Index" asp-route-bookType="@bt" asp-route-pageNum="1">@bt</a>
     }
 </div>
