--- a/Mission11/Views/Home/Index.cshtml
+++ b/Mission11/Views/Home/Index.cshtml
@@ -12,4 +12,5 @@
     }
 
 <div page-model="@Model.PaginationInfo" page-action="Index" page-class-enabled="true" page-class="btn custom-button" 
-page-class-normal="btn-outline-dark" page-class-selected="btn-primary" class="btn-group pull-right m-1"></div>
+page-class-normal="btn-outline-dark" page-class-selected="btn-primary" 
+page-url-bookType="@Model.CurrentBookType" class="btn-group pull-right m-1"></div>
