--- a/Mission11/Pages/Cart.cshtml
+++ b/Mission11/Pages/Cart.cshtml
@@ -14,6 +14,7 @@
             <th class="text-right">Quantity</th>
             <th class="text-right">Price</th>
             <th class="text-right">Subtotal</th>
+            <th></th>
         </tr>
     </thead>
 
@@ -21,11 +22,18 @@
         @foreach (var l in Model.Cart?.Lines ?? Enumerable.Empty<Cart.CartLine>())
         {
             <tr>
-                <td class="text-left">@l.Book?.Title</td>
-                <td class="text-center">@l.Book?.Author</td>
+                <td class="text-left">@l.Book.Title</td>
+                <td class="text-center">@l.Book.Author</td>
                 <td class="text-right">@l.Quantity</td>
-                <td class="text-right">@l.Book?.Price</td>
-                <td class="text-right">@((l.Quantity * (l.Book?.Price ?? 0)).ToString("c"))</td>
+                <td class="text-right">$25</td> @*@l.Book.Price*@
+                <td class="text-right">@((l.Quantity * 25).ToString("c"))</td> @*@l.Book.Price*@
+                <td class="text-center">
+                    <form asp-page-handler="Remove" method="post">
+                        <input type="hidden" name="BookId" value="l.Book.BookId" />
+                        <input type="hidden" name="returnUrl" value="@Model?.ReturnUrl" />
+                        <button type="submit" class="btn btn-sm btn-danger">Remove</button>
+                    </form>
+                </td>
             </tr>
         }
 
