--- a/Mission11/Views/Shared/_Layout.cshtml
+++ b/Mission11/Views/Shared/_Layout.cshtml
@@ -7,11 +7,17 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Mission11.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/lib/font-awesome/css/all.min.css" />
 </head>
 <body>
 
     <div class="bg-dark text-white p-2">
-        <span class="navbar-brand m-lg-2">BOOKS</span>
+        <div class="containter-fluid">
+            <div class="row">
+                <div class="col navbar-brand">BOOKS</div>
+                <div class="col-6 navbar-text text-end"><vc:cart-summary /></div>
+            </div>
+        </div>
     </div>
     <div class="row m-1 p-1">
         <div class="col-3">
