--- a/Mission11/Views/_ViewImports.cshtml
+++ b/Mission11/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Mission11
 @using Mission11.Models
 @using Mission11.Models.ViewModels
+@using Mission11.Infastructure
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Mission11
